# subtext-codec

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  OBJECTIVE.md  README.md  __main__.py  demo.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yaml
.ipynb_checkpoints/: demo-checkpoint.ipynb
samples/: CATS.HEIC  decoded.txt  encoded.txt  key.json  message.txt  message_padded.txt  secret.txt
subtext/: __init__.py  cli.py  codec.py
subtext_codec/: __init__.py  __main__.py  cli.py  codec.py
tests/: test_integration_codec.py  test_llm_codec.py
