[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "subtext-codec"
version = "0.1.1"
description = "Steganographic data encoding in LLM-generated text using logit rank steering."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Shevis Johnson" , email = "hello@shev.is" }]
requires-python = ">=3.10"
dependencies = [
    "torch==2.9.1",
    "torchvision==0.24.1",
    "transformers==4.57.3",
]

[project.optional-dependencies]
test = ["pytest>=9.0"]

[project.scripts]
subtext-codec = "subtext_codec.cli:main"
subtext = "subtext_codec.cli:main"

[project.urls]
Homepage = "https://github.com/shevisj/subtext-codec"
Repository = "https://github.com/shevisj/subtext-codec"
Issues = "https://github.com/shevisj/subtext-codec/issues"

[tool.hatch.build.targets.wheel]
packages = ["subtext_codec"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (requiring network access or real models)",
]
testpaths = ["tests"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
